--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,6 @@
     <img src="@img/cover.jpg" alt="" srcset="">
   </main>
   @@include('html/footer.html',{})
+  <script src="js/app.min.js"></script>
 </body>
 </html>
